programming-language/workspace/compiler/tests/fixtures/invalid/return_type_mismatch.cb64
# Return type mismatch
def foo() -> byte:
    return "string"

def main():
    pass
